glibc (2.5-5) UNRELEASED; urgency=low

  * Rename patches/all/submitted-iconv-E13B.diff into
    patches/all/cvs-iconv-E13B.diff as the patch has been accepted
    upstream.
  * debian/debhelper.in/libc.NEWS: new file to warn user to upgrade
    to a 2.6.1 or later kernel before upgrading the glibc.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 24 Apr 2007 00:27:54 +0200

glibc (2.5-4) unstable; urgency=low

  * debian/rules.d/build.mk: fix the testsuite workaround on the MIPS SB1
    platform.
  * debian/locales-all.README.Debian: Remove again, it is useless now.
    (Closes: #378191)
  * debhelper.in/libc.preinst: use dpkg-query instead of looking into
    /var/lib/dpkg/info. Thanks to Guillem Jover for the hint.
  * patches/mips/cvs-ldsodefs_h.diff: new patch (correct multiple
    inclusion guard in sysdeps/mips/ldsodefs.h) from CVS.
  * patches/any/cvs-printf_fp-c.diff: update patch from CVS (fix exponent
    -4 special case handling when wcp == wstartp + 1).  Closes: #419225.
  * patches/any/cvs-bits_in_h-ipv6.diff: new patch from CVS (defines
    IPV6_V6ONLY in bits/in.h).  Closes: #420188.
  * debhelper.in/libc.preinst: check the library files instead of links
    while checking for a non-dpkg owned libc6 in /lib/tls. Links are
    recreated by ldconfig.
  * patches/any/cvs-realpath.diff: new patch (fix wrong comment about
    realpath() in /usr/include/stdlib) from CVS.  Closes: #239427.
  * debian/local/manpages/iconv.1: mention that -t is optional.  Closes:
    #354292.
  * debian/local/manpages/iconv.1: mention that multiple fils could be
    specified on the command line.  Closes: #340911.
  * debian/patches/any/submitted-strfry.diff: new patch (fix strfry()
    distribution) by Steinar H. Gunderson.  Closes: #341903.
  * patches/all/submitted-iconv-E13B.diff: new patch to fix wrong E13B
    charset alias. patches/any/submitted-iconv-colon.diff: new patch to
    allow colons in charset names.  Closes: #91935.