@@ -5,8 +5,9 @@ glibc (2.5-5) UNRELEASED; urgency=low
     upstream.
   * debian/debhelper.in/libc.NEWS: new file to warn user to upgrade
     to a 2.6.1 or later kernel before upgrading the glibc.
+  * debian/script.in/kernelcheck.sh: improve the kernel error message.
 
- -- Aurelien Jarno <aurel32@debian.org>  Tue, 24 Apr 2007 00:27:54 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 24 Apr 2007 00:50:39 +0200
 
 glibc (2.5-4) unstable; urgency=low
 
